src/tess/tl/test/pass/test_let_in_basic.tl
#module main

main() {
    a := 99                             // declares a
    b := 1                              // declares b
    a = 1                               // reassigns to a
    a - b                               // returns result
}
